changes into index.html

--- a/html/index.html
+++ b/html/index.html
@@ -18,14 +18,14 @@
 
         <img class="round" src="/img/male.jpg" style="width: 150px;height: auto;" alt="user" />
         <!-- Full Name -->
-        <h3>Full Name</h3>
+        <h3>Honey Tyagi</h3>
         <!-- Your City -->
-        <h6>Your City</h6>
+        <h6>Ghaziabad</h6>
         <!-- Designation -->
-        <p>Designation</p>
+        <p>Full Stack Web Developer | Open source contributor (Design -> Develop -> Deploy)</p>
         <div class="buttons">
             <!-- GitHub Profile URL inside href -->
-            <a href="" style="text-decoration:none" class="btn1"> GitHub <i class="fab fa-github"></i></a>
+            <a href="https://github.com/HoneyTyagii" style="text-decoration:none" class="btn1"> GitHub <i class="fab fa-github"></i></a>
             <!-- Twitter Profile URL inside href -->
             <a href="" style="text-decoration:none" class="btn1 btn2"> Twitter <i class="fab fa-twitter"></i></a>
         </div>
